# editor-open

./: LICENSE  README  README.md  editor-open.cabal
res/: bug-schema.json  bug-schema.yaml
scripts/: hackage-docs.sh
skel/: Skel.hs
src/Text/: Editor.hs
tests/: test_yaml_file.hs  test_yaml_file_conduit.hs
